Kubernetes_Basics/Cluster_Networking_Ingress/task/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: mate-ingress
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
 rules:
 - http:
     paths:
     - pathType: ImplementationSpecific
       path: /blue(/|$)(.*)
       backend:
         service:
           name: kube2py-blue-service
           port:
             number: 80
     - pathType: ImplementationSpecific
       path: /green(/|$)(.*)
       backend:
         service:
           name: kube2py-green-service
           port:
             number: 80
